--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive' 
 	implementation 'org.springframework.session:spring-session-data-redis' 
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	implementation 'org.springframework.boot:spring-boot-starter-security' 
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' 
+  	testImplementation 'org.springframework.security:spring-security-test' 
   	testImplementation 'org.testcontainers:junit-jupiter' 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
@@ -54,5 +57,6 @@ tasks.named('test') {
 
 bootRun {
   environment "CATALOG_SERVICE_URL", "http://192.168.0.9:9001"
-  environment "ORDER_SERVICE_URL", "http://192.168.0.9:9002"	
+  environment "ORDER_SERVICE_URL", "http://192.168.0.9:9002"
+  environment "SPA_URL", "http://192.168.0.9:9004"	
 }
