--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -72,6 +72,7 @@ spring:
               burstCapacity: 20
               requestedTokens: 1
         - SaveSession
+        - TokenRelay
         
   redis: 
     connect-timeout: 2s
@@ -92,7 +93,7 @@ spring:
           keycloak: 
             client-id: edge-service 
             client-secret: polar-keycloak-secret 
-            scope: openid 
+            scope: openid,roles 
         provider:
           keycloak: 
             issuer-uri: http://192.168.0.9:8080/realms/PolarBookshop 
