--- a/build.gradle
+++ b/build.gradle
@@ -15,13 +15,18 @@ repositories {
 ext {
 	set('springCloudVersion', "2021.0.5")
 	set('testcontainersVersion', "1.17.3") 
+	set('otelVersion', "1.17.0")
 }
 
 dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive' 
-	implementation 'org.springframework.session:spring-session-data-redis' 
+	implementation 'org.springframework.session:spring-session-data-redis'
+	runtimeOnly "io.opentelemetry.javaagent:opentelemetry-javaagent:${otelVersion}" 
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+	runtimeOnly 'io.github.resilience4j:resilience4j-micrometer' 
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.boot:spring-boot-starter-security' 
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' 
@@ -59,4 +64,8 @@ bootRun {
   environment "CATALOG_SERVICE_URL", "http://192.168.0.9:9001"
   environment "ORDER_SERVICE_URL", "http://192.168.0.9:9002"
   environment "SPA_URL", "http://192.168.0.9:9004"	
+}
+
+springBoot {
+  buildInfo()
 }
