--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -110,8 +110,38 @@ resilience4j:
     configs:
       default:
         timeoutDuration: 5s
-        
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, prometheus, info, heapdump
+  endpoint: 
+    health: 
+      show-details: always
+      show-components: always
+      probes: 
+        enabled: true
+      group: 
+        readiness: 
+          include: readinessState,redis
+  metrics:  
+    tags: 
+      application: ${spring.application.name}
+  info: 
+    env: 
+      enabled: true
+    java: 
+      enabled: true
+    os: 
+      enabled: true
+      
+info:
+  system: Polar Bookshop        
+
+logging:
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
 #logging:
 #  level:
 #    io.github.resilience4j: DEBUG
