--- a/k8s_kubectl/deployment.yml
+++ b/k8s_kubectl/deployment.yml
@@ -49,10 +49,7 @@ spec:
               value: http://polar-ui
             - name: SPRING_CLOUD_CONFIG_URI
               value: http://config-service
-          volumeMounts:
-            - name: edge-config-volume
-              mountPath: /workspace/config
-      volumes:
-        - name: edge-config-volume
-          configMap:
-            name: edge-config  
+            - name: SPRING_REDIS_HOST
+              value: polar-redis
+            - name: SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER_URI
+              value: http://polar-keycloak/realms/PolarBookshop
