--- a/src/main/resources/application_configserver.yaml
+++ b/src/main/resources/application_configserver.yaml
@@ -11,10 +11,9 @@ spring:
   lifecycle:
     timeout-per-shutdown-phase: 15s
   config:
-    import: ""
+    import: "optional:configserver:"
   cloud:
     config:
-      enabled: false
       uri: http://localhost:8888
       request-connect-timeout: 5000 # 5s
       request-read-timeout: 5000 # 5s
